[package]
name = "redscript-dap"
version = "0.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1"
slab = "0.4"
parking = "2"
dap = "0.4.1-alpha1"
static_assertions = "1"
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs", rev = "v0.9.0" }

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"

[profile.release]
codegen-units = 1
panic = 'abort'
lto = true

[package.metadata.release]
pre-release-commit-message = "chore: bump version"
publish = false
